# Sputterer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  \  imgui.ini  input.toml  input_uiuc_gt.toml  meson.build
data/: c-c-emission-prob.csv  xe-c-sputtering-angle.csv
glad/include/glad/: glad.h
glad/src/: glad.c
include/: .ParticleContainer.hpp.swp  Camera.hpp  Faddeeva.cpp  Geometry.cuh  Mesh.cuh  Mesh.hpp  ParticleContainer.cuh  ParticleContainer.hpp  Shader.hpp  Surface.cuh  Surface.hpp  Vec3.cuh  Vec3.hpp  Window.hpp  cuda_helpers.cuh  gl_helpers.hpp  glad.c
include/glad/: glad.h
include/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
shaders/: bvh.geom  particle.frag  particle.vert  plume.frag  plume.geom  plume.vert  shader.frag  shader.vert
src/: .main.cpp.swp  App.hpp  Camera.cpp  Camera.cu  Camera.h  Camera.hpp  Constants.h  Constants.hpp  Cuda.cu  Cuda.cuh  DepositionInfo.h  DepositionInfo.hpp  Input.cpp  Input.cu  Input.h  Input.hpp  Mesh.cpp  Mesh.cu  Mesh.h  Mesh.hpp  Models.h  Models.hpp  Output.hpp  ParticleContainer.cu  ParticleContainer.cuh  ParticleContainer.h  PlumeInputs.h  Renderer.cpp  Renderer.cu  Renderer.h  Renderer.hpp  Shader.cpp  Shader.cu  Shader.h  Shader.hpp  ShaderCode.h  ShaderCode.hpp  Surface.cpp  Surface.cu  Surface.h  (+50 more)
